crates/biome_cli/tests/snapshots/main_cases_html_style_attribute/does_not_lint_component_style_props_as_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint component.svelte component.astro
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `component.astro`

```astro
<Button style="colr: blue" />

```

## `component.svelte`

```svelte
<Button style="colr: blue" />

```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
