crates/biome_cli/tests/snapshots/main_cases_html_style_attribute/formats_style_attribute_as_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "html": { "formatter": { "enabled": true } } }
```

## `index.html`

```html
<div style="color: #fff; background: red"></div>
<div
	style="
		all: initial;
		display: block;
		contain: content;
		text-align: center;
		max-width: 500px;
		margin: 0 auto;
	"
></div>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
