crates/biome_cli/tests/snapshots/main_cases_html_style_attribute/leaves_non_css_style_attributes_alone.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "html": { "formatter": { "enabled": true } } }
```

## `index.html`

```html
<div style="{{ dynamic }}"></div>
<div style="primary"></div>
<div style=""></div>
<div style=""></div>
<div style></div>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
