crates/biome_cli/tests/snapshots/main_cases_html_style_attribute/lints_dom_style_attributes_as_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint index.html component.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `component.vue`

```vue
<template><Button style="colr: blue" /></template>

```

## `index.html`

```html
<div style="colr: blue"></div>
<my-element style="colr: blue"></my-element>

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
component.vue:1:26 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
  > 1 │ <template><Button style="colr: blue" /></template>
      │                          ^^^^
    2 │ 
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
index.html:1:13 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
  > 1 │ <div style="colr: blue"></div>
      │             ^^^^
    2 │ <my-element style="colr: blue"></my-element>
    3 │ 
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
index.html:2:20 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
    1 │ <div style="colr: blue"></div>
  > 2 │ <my-element style="colr: blue"></my-element>
      │                    ^^^^
    3 │ 
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 3 errors.
```
