crates/biome_cli/tests/snapshots/main_cases_html_style_attribute/lints_dom_style_attributes_as_css_in_jsx.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint index.jsx
```

## `biome.json`

```json
{ "javascript": { "experimentalEmbeddedSnippetsEnabled": true } }
```

## `index.jsx`

```jsx
<>
    <div style="colr: blue"></div>
    <div style="colr: blue"/>
    <my-element style="colr: blue"></my-element>
    <div css:style="colr: blue"/>
    <Component style="colr: blue"></Component>
</>

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
index.jsx:2:17 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
    1 │ <>
  > 2 │     <div style="colr: blue"></div>
      │                 ^^^^
    3 │     <div style="colr: blue"/>
    4 │     <my-element style="colr: blue"></my-element>
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
index.jsx:3:17 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
    1 │ <>
    2 │     <div style="colr: blue"></div>
  > 3 │     <div style="colr: blue"/>
      │                 ^^^^
    4 │     <my-element style="colr: blue"></my-element>
    5 │     <div css:style="colr: blue"/>
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
index.jsx:4:24 lint/correctness/noUnknownProperty ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unknown property is not allowed.
  
    2 │     <div style="colr: blue"></div>
    3 │     <div style="colr: blue"/>
  > 4 │     <my-element style="colr: blue"></my-element>
      │                        ^^^^
    5 │     <div css:style="colr: blue"/>
    6 │     <Component style="colr: blue"></Component>
  
  i See CSS Specifications and browser specific properties for more details.
  
  i To resolve this issue, replace the unknown property with a valid CSS property.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 3 errors.
```
